fix several bugs on mobile caused by new menu

--- a/resources/assets/css/common/shame.less
+++ b/resources/assets/css/common/shame.less
@@ -80,3 +80,8 @@
    -webkit-transform: rotate(450deg);
  }
 }
+.mobile-hidden {
+  .mq_640({
+    display: none !important;
+  });
+}
